project(trees)
cmake_minimum_required(VERSION 2.6)
set(SRC main.cpp)
set(INC node.hpp stack.hpp tree.hpp)
add_executable(trees ${SRC} ${INC})

set (TEST_SRC test_tree.cpp test_stack.cpp)
find_package (Boost COMPONENTS unit_test_framework REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
set (TEST test_trees)
add_executable (${TEST} ${TEST_SRC})
target_link_libraries (${TEST} ${PROJECT} ${Boost_LIBRARIES})
enable_testing ()
add_test (${TEST} ${TEST})
